--- a/Teste_acionar_iluminação_com_feedback.html
+++ b/Teste_acionar_iluminação_com_feedback.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Controle de Relés</title>
+  <title>Controle de Iluminação/Portão</title>
   <style>
     body {
       font-family: Arial, sans-serif;
