--- a/Teste_acionar_iluminação_com_feedback.html
+++ b/Teste_acionar_iluminação_com_feedback.html
@@ -63,7 +63,7 @@
   </script>
 </head>
 <body>
-  <h1>Controle de Relés</h1>
+  <h1>Controle de Relés0</h1>
   
   <div>
     <button onclick="enviarComando(1, 1)">Ligar Rele 1</button>
