--- a/Teste_acionar_iluminação_com_feedback.html
+++ b/Teste_acionar_iluminação_com_feedback.html
@@ -63,18 +63,18 @@
   </script>
 </head>
 <body>
-  <h1>Controle de Relés0</h1>
+  <h1>Controle Iluminação Portão</h1>
   
   <div>
-    <button onclick="enviarComando(1, 1)">Ligar Rele 1</button>
-    <button onclick="enviarComando(1, 0)">Desligar Rele 1</button>
+    <button onclick="enviarComando(1, 1)">Abrir Portão</button>
+    <button onclick="enviarComando(1, 0)">Ferchar Portão</button>
     <div id="status1" class="status">Estado do Rele 1: Desconhecido</div>
     <div id="loading1" class="loading">Carregando...</div>
   </div>
 
   <div>
-    <button onclick="enviarComando(2, 1)">Ligar Rele 2</button>
-    <button onclick="enviarComando(2, 0)">Desligar Rele 2</button>
+    <button onclick="enviarComando(2, 1)">Ligar Iluminaçao</button>
+    <button onclick="enviarComando(2, 0)">Desligar Iluminação</button>
     <div id="status2" class="status">Estado do Rele 2: Desconhecido</div>
     <div id="loading2" class="loading">Carregando...</div>
   </div>
