--- a/Teste_acionar_iluminação_com_feedback.html
+++ b/Teste_acionar_iluminação_com_feedback.html
@@ -73,8 +73,8 @@
   </div>
 
   <div>
-    <button onclick="enviarComando(2, 1)">Ligar Iluminaçao</button>
-    <button onclick="enviarComando(2, 0)">Desligar Iluminação</button>
+    <button onclick="enviarComando(2, 1)">Ligar Luz Portão</button>
+    <button onclick="enviarComando(2, 0)">Desligar Luz Portão</button>
     <div id="status2" class="status">Estado do Rele 2: Desconhecido</div>
     <div id="loading2" class="loading">Carregando...</div>
   </div>
