--- a/Teste_acionar_iluminação_com_feedback.html
+++ b/Teste_acionar_iluminação_com_feedback.html
@@ -72,15 +72,15 @@
       // Desliga o relé 1
       enviarComando(1, 0);
 
-      // Aguarda 2 segundos e liga o relé 1
+      // Aguarda 5 segundos e liga o relé 1
       setTimeout(() => {
         enviarComando(1, 1);
 
-        // Aguarda mais 2 segundos e desliga o relé 1 novamente
+        // Aguarda mais 5 segundos e desliga o relé 1 novamente
         setTimeout(() => {
           enviarComando(1, 0);
-        }, 2000);
-      }, 2000);
+        }, 5000); // 5000 milissegundos = 5 segundos
+      }, 5000); // 5000 milissegundos = 5 segundos
     }
 
     function verificarEstadoInicial() {
