--- a/Teste_acionar_iluminação_com_feedback.html
+++ b/Teste_acionar_iluminação_com_feedback.html
@@ -69,18 +69,23 @@
     }
 
     function fecharPortao() {
+      console.log("Iniciando sequência de fechamento do portão...");
+
       // Desliga o relé 1
       enviarComando(1, 0);
+      console.log("Rele 1 desligado.");
 
       // Aguarda 5 segundos e liga o relé 1
       setTimeout(() => {
+        console.log("Aguardou 5 segundos. Ligando Rele 1...");
         enviarComando(1, 1);
 
         // Aguarda mais 5 segundos e desliga o relé 1 novamente
         setTimeout(() => {
+          console.log("Aguardou mais 5 segundos. Desligando Rele 1...");
           enviarComando(1, 0);
-        }, 12000); // 12000 milissegundos = 12 segundos
-      }, 12000); // 12000 milissegundos = 12 segundos
+        }, 12000); // 5000 milissegundos = 5 segundos
+      }, 12000); // 5000 milissegundos = 5 segundos
     }
 
     function verificarEstadoInicial() {
