--- a/Teste_acionar_iluminação_com_feedback.html
+++ b/Teste_acionar_iluminação_com_feedback.html
@@ -21,10 +21,6 @@
       background-color: #007BFF;
       color: white;
     }
-    button:disabled {
-      background-color: #cccccc;
-      cursor: not-allowed;
-    }
     button:hover {
       background-color: #0056b3;
     }
@@ -41,30 +37,27 @@
   </style>
   <script>
     const apiKey = "VQ9EFXSBD7LHERF4"; // Substitua pela sua Write API Key
-    const channelID = 1234567; // Substitua pelo ID do seu canal
 
     function enviarComando(rele, estado) {
       const url = `https://api.thingspeak.com/update?api_key=${apiKey}&field${rele}=${estado}`;
-      const buttons = document.querySelectorAll(`button[onclick*="enviarComando(${rele},"]`);
 
-      buttons.forEach(button => button.disabled = true);
+      // Exibe o ícone de carregamento
       document.getElementById(`loading${rele}`).style.display = "block";
 
       fetch(url)
         .then(response => response.text())
         .then(data => {
+          // Atualiza o status
           const statusElement = document.getElementById(`status${rele}`);
           statusElement.textContent = `Rele ${rele} ${estado == 1 ? 'ligado' : 'desligado'}`;
           statusElement.style.color = estado == 1 ? 'green' : 'red';
 
+          // Oculta o ícone de carregamento
           document.getElementById(`loading${rele}`).style.display = "none";
-          buttons.forEach(button => button.disabled = false);
         })
         .catch(error => {
-          alert("Erro ao enviar comando. Verifique sua conexão com a internet.");
+          alert("Erro ao enviar comando.");
           document.getElementById(`loading${rele}`).style.display = "none";
-          buttons.forEach(button => button.disabled = false);
-          console.error("Erro:", error);
         });
     }
   </script>
@@ -74,9 +67,16 @@
   
   <div>
     <button onclick="enviarComando(1, 1)">Abrir Portão</button>
-    <button onclick="enviarComando(2, 1)">Fechar Portão</button>
+    <button onclick="enviarComando(1, 0)">Ferchar Portão</button>
     <div id="status1" class="status">Estado do Rele 1: Desconhecido</div>
     <div id="loading1" class="loading">Carregando...</div>
+  </div>
+
+  <div>
+    <button onclick="enviarComando(2, 1)">Ligar Luz Portão</button>
+    <button onclick="enviarComando(2, 0)">Desligar Luz Portão</button>
+    <div id="status2" class="status">Estado do Rele 2: Desconhecido</div>
+    <div id="loading2" class="loading">Carregando...</div>
   </div>
 </body>
 </html>
